# wisentbot

./: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  MEMORY.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
examples/: service_agent.py  simple_agent.py
singularity/: __init__.py  __main__.py  adaptive.py  autonomous_agent.py  capabilities.py  cli.py  cognition.py  config.py  context.py  cron_parser.py  error_recovery.py  event_bus.py  execution_instrumentation.py  interactive_agent.py  journal.py  middleware.py  model_selector.py  multi_action.py  output_manager.py  pipeline_executor.py  result_feedback.py  retry_executor.py  runtime_metrics.py  service_api.py  skill_discovery.py  skill_loader.py  skill_profiles.py  state_persistence.py  task_runner.py  token_manager.py  tool_calling.py  tool_filter.py  tool_resolver.py
singularity/data/: activity.json
singularity/llm/: Dockerfile  docker-compose.yml  server.py
singularity/skills/: __init__.py  agent_checkpoint.py  agent_funding.py  agent_network.py  agent_spawner.py  alert_incident_bridge.py  alert_scheduler_bridge.py  api_gateway.py  api_marketplace.py  auto_catalog.py  auto_playbook_generator.py  auto_reputation_bridge.py  autonomous_loop.py  base.py  billing_scheduler_bridge.py  browser.py  canary_deployment.py  capability_delegation.py  capability_gap_analyzer.py  checkpoint.py  checkpoint_comparison.py  checkpoint_event_bridge.py  checkpoint_sync.py  circuit_breaker_event_bridge.py  circuit_sharing.py  circuit_sharing_events.py  cloudflare_dns.py  (+129 more)
tests/: conftest.py  test_adaptive.py  test_agent.py  test_agent_checkpoint.py  test_agent_completion.py  test_agent_funding.py  test_agent_network.py  test_agent_objective.py  test_agent_profile.py  test_agent_spawner.py  test_alert_incident_bridge.py  test_alert_scheduler_bridge.py  test_api_gateway.py  test_api_marketplace.py  test_auto_catalog.py  test_auto_playbook_generator.py  test_auto_reputation_bridge.py  test_autonomous_agent.py  test_autonomous_loop.py  test_billing_scheduler_bridge.py  test_canary_deployment.py  test_capabilities.py  test_capability_delegation.py  test_capability_gap_analyzer.py  test_checkpoint_comparison.py  test_checkpoint_event_bridge.py  test_checkpoint_sync.py  test_circuit_breaker_event_bridge.py  test_circuit_breaker_loop_integration.py  test_circuit_sharing.py  test_circuit_sharing_events.py  test_cli.py  test_cloudflare_dns.py  test_code_review.py  test_cognition.py  test_cognition_engine.py  test_cognition_types.py  test_config.py  test_config_template.py  test_configurable_skills.py  (+164 more)
wisentbot/: autonomous_agent.py  cognition.py
(+7 files in other folders)
